@@ -128,6 +128,9 @@
 	set (parts of the other view was visible when 'relativenumber' is set).
 	Thanks to filterfalse.
 
+	Fixed resetting custom view title to "(null)" when loading another custom
+	view in the same pane failed.
+
 0.8.2-beta to 0.8.2
 
 	Added support for matchit to filetype plugin.  Patch by filterfalse.
